--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/react-redux": "^7.1.34",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "react": "^18.3.1",
